tools/flowc/tests/errors/error34.flow
CommonStyle ::= Style1, Style2;
    Style1 : ();
    Style2 : ();
SuperStyle ::= CommonStyle, Style3;
    Style3 : ();

Super(styles : [SuperStyle]);

Common(styles : [CommonStyle]);

getCommonStyles(styles : [CommonStyle], s : Super, c : Common) -> [[CommonStyle]] {
	// We declare the function to only accept [[CommonStyle]], but this array is [[SuperStyle]]
	[styles, s.styles, c.styles]
}
